--- a/tutorial0_serve/index.html
+++ b/tutorial0_serve/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
+    <title>Interactive Data Visualization Tutorial 0</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    Insert something creative 
+    <a href="https://upload.wikimedia.org/wikipedia/commons/2/2a/HoverCat.jpg">here</a>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
