Tutorial 1 final hovercat

--- a/tutorial0_serve/index.html
+++ b/tutorial0_serve/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
+<html>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css"></link>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
-    <script src="../lib/d3.js"></script>
-    <script src="main.js"></script>
-  </body>
+<script src="main.js"></script>
+
+<p><button onclick="myMove()">Click to see me hover</button></p> 
+
+<div id ="container">
+  <img src ="https://upload.wikimedia.org/wikipedia/commons/0/06/Circumhorizontal_arc_%28Fire_Rainbow%29_in_the_Nepal_Himalayas.jpg" 
+  alt="container">
+  <div id ="animate">
+    <img src ="https://upload.wikimedia.org/wikipedia/commons/2/2a/HoverCat.jpg" 
+  alt="animate"
+  ></div>
+
+</body>
 </html>
