--- a/tutorial1_intro/index.html
+++ b/tutorial1_intro/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
+    <title>Protests in Europe</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    <h1>
+      <p>Violent State Responses to Protests in Europe</p>
+      <p>2009-2019</p>
+    </h1>
+  </body>
+    <table id="d3-table"></table>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
