--- a/tutorial3_distributions/index.html
+++ b/tutorial3_distributions/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header>
-      <h1>Tutorial 3</h1>
-      <h2>Distributions</h2>
+      <h1>Protests in Europe</h1>
+      <h2>State Police Responses Relative to Size of Protest</h2>
     </header>
 
     <label for="dropdown">Select a Party</label>
