--- a/tutorial3_distributions/index.html
+++ b/tutorial3_distributions/index.html
@@ -15,7 +15,7 @@
       <h2>State Police Responses Relative to Size of Protest</h2>
     </header>
 
-    <label for="dropdown">Select a Party</label>
+    <label for="dropdown">Select a City</label>
     <select id="dropdown" name="dropdown"></select>
     <!-- all we need is an element to select -->
     <div id="d3-container"> </div>
