--- a/tutorial4_timeseries/index.html
+++ b/tutorial4_timeseries/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <header>
-      <h1>Tutorial 4</h1>
-      <h2>Time Series</h2>
-    </header>
+    <center><header>
+      <h1>Level of State Violence During Protests 
+        <p>Across the Globe</p></h1>
+    </header></center>
 
-    <label for="dropdown">Select a Country</label>
-    <select id="dropdown" name="dropdown"></select>
+    <label for="dropdown"></label>
+    <P align="right"><select id="dropdown" name="dropdown"></select>
     <!-- all we need is an element to select -->
-    <div id="d3-container"> </div>
-
+    <div id="d3-container"> </div></P>
+  
     <!-- this is the line that loads in d3 -->
     <script src="../lib/d3.js"></script>
     <!-- this is the line that loads in the main js script -->
