--- a/Womens_project/index.html
+++ b/Womens_project/index.html
@@ -11,10 +11,11 @@
   </head>
   <body>
     <header>
-      <h1>Squirrel Activities</h1>
-      <h2>Quantities and Amounts Observed</h2>
+      <center><h1>NYC Women's Services</h1>
+      <h2>by Borough</h2></center>
     </header>
-
+    <label for="dropdown">Select a Specialty</label>
+    <select id="dropdown" name="dropdown"></select>
     <!-- all we need is an element to select -->
     <div id="d3-container"> </div>
 
