--- a/Womens_project/index.html
+++ b/Womens_project/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 
     <!-- this is the title that goes in the browser tab name  -->
-    <title>Squirrel Activities</title>
+    <title>NYC Women's Services</title>
 
     <!-- custom font: https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -11,8 +11,10 @@
   </head>
   <body>
     <header>
-      <center><h1>NYC Women's Services</h1>
-      <h2>by Borough</h2></center>
+      <center>
+        <h1>NYC Women's Services</h1>
+      <h2>by Borough</h2>
+    </center>
     </header>
     <label for="dropdown">Select a Specialty</label>
     <select id="dropdown" name="dropdown"></select>
