--- a/Womens_project/index.html
+++ b/Womens_project/index.html
@@ -16,7 +16,7 @@
       <h2>by Borough</h2>
     </center>
     </header>
-    <label for="dropdown">Select a Specialty</label>
+    <label for="dropdown">Services</label>
     <select id="dropdown" name="dropdown"></select>
     <!-- all we need is an element to select -->
     <div id="d3-container"> </div>
