--- a/narrative/index.html
+++ b/narrative/index.html
@@ -3,27 +3,24 @@
     <meta charset="utf-8">
 
     <!-- this is the title that goes in the browser tab name  -->
-    <title>NYC Women's Services</title>
+    <title>Interactive Data Visualization Tutorial</title>
 
     <!-- custom font: https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <header>
-      <center>
-        <h1>NYC Womens Services</h1>
-      <h2>by Borough</h2>
-    </center>
-    </header>
-    <label for="dropdown">Services</label>
-    <select id="dropdown" name="dropdown"></select>
+    <header><center>
+      <h1>Womens Services</h1>
+      <h2>in New York City</h2>
+    </center></header>
+
     <!-- all we need is an element to select -->
+    <div id="hover-content"></div>
     <div id="d3-container"> </div>
 
     <!-- this is the line that loads in d3 -->
     <script src="../lib/d3.js"></script>
-    <script src="../lib/d3-array.js"></script>
     <!-- this is the line that loads in the main js script -->
     <script src="./main.js"></script>
   </body>
