--- a/narrative/index.html
+++ b/narrative/index.html
@@ -16,9 +16,9 @@
     </center></header>
 
     <!-- all we need is an element to select -->
-    <div id="hover-content"></div>
-    <div id="d3-container"> </div>
 
+    <div id="my_dataviz"></div>
+    <div id=".borough"></div>
     <!-- this is the line that loads in d3 -->
     <script src="../lib/d3.js"></script>
     <!-- this is the line that loads in the main js script -->
